# forgetnet

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/forgetnet/: __init__.py  cli.py  models.py  report.py
src/forgetnet/memory/: __init__.py  forgetting.py  interference.py  retention.py
src/forgetnet/unlearning/: __init__.py  eraser.py  selective.py  verifier.py
tests/: test_benchmark.py  test_core.py  test_forgetnet.py  test_integration.py
