[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "forgetnet"
version = "0.1.0"
description = "AI Memory and Forgetting Research"
authors = [{ name = "Mukunda Katta" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
forgetnet = "forgetnet.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
